ARROW-6187: [C++] Fallback to storage type when writing ExtensionType to Parquet